Initital HTML and CSS structure.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-"Hello World" 
+<html>
+
+<head>
+    <title>TItle</title>
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+    <!-- SIDEBAR -->
+    <div class="sidebar">
+
+        <!-- MENU -->
+        <ul class="menu">
+            <li>
+                <a href="index.html">About</a>
+            </li>
+            <li>
+                <a href="#works">Works</a>
+            </li>
+            <li>
+                <a href="https://picareli.tumblr.com/">Blog</a>
+            </li>
+        </ul>
+
+        <!-- SOCIAL LINKS -->
+
+    </div>
+
+    <!-- MAIN -->
+    <div class="main">
+
+        <!-- FIRST PAGE -->
+        <div class="first-page">
+
+            <p class="banner">{ Page Title }</p>
+
+            <!-- CONTAINER -->
+            <div class="container">
+                <div class="row row--fixed-height">
+                    <div class="quote">Summary of professional history and future plans</div>
+
+                    <div class="info">
+
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/480px-Circle_-_black_simple.svg.png">
+
+                        <div class="info-text">
+                            24
+                            <br /> Brazil
+                            <br /> Lisbon, Portugal
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="icon">
+                        <p>education</p>
+
+                        <a href="https://www.ulusofona.pt/en">
+                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                        </a>
+
+                        <p>short description of position</p>
+                    </div>
+
+                    <div class="icon">
+                        <p>past work</p>
+
+                        <a href="http://labpsicom.ulusofona.pt/en">
+                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                        </a>
+
+                        <p>short description of position</p>
+                    </div>
+
+                    <div class="icon">
+                        <p>current work</p>
+
+                        <a href="http://addon.pt/">
+                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                        </a>
+
+                        <p>short description of psoition</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- WORKS -->
+        <a name="works"></a>
+
+        <div class="project">
+            <iframe width="100%" height="350" src="https://www.youtube-nocookie.com/embed/8iNc3K0rE2s?rel=0&amp;controls=0&amp;showinfo=0"
+                frameborder="0" allowfullscreen></iframe>
+
+            <div class="container">
+                <div class="row row--paragraph">
+                    <h1>IVAR</h1>
+
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.
+                    </p>
+
+                    <a class="button" href="https://github.com/picareli">Get Source</a>
+
+                    <a class="button" href="https://itch.io/picareli">Play</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="project">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/cBZa4zx8iLE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
+                allowfullscreen></iframe>
+
+            <div class="container">
+                <div class="row row--paragraph">
+                    <h1>Systemic Lisbon Battery</h1>
+
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+</html>
