added more styling and formating to the firstpage.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         </ul>
 
         <!-- SOCIAL LINKS -->
-
+        <div class="social">
+            <div class="social--icon-container">
+                <a class="linkedin" href="https://www.linkedin.com/in/picareli"><div class="social--icon linkedin"></div></a>
+                <a href="https://connect.unity.com/u/59086d980909150023b548a7"><div class="social--icon unity"></div></a>
+                <a href="https://github.com/picareli" /><div class="social--icon github"></div></a>
+            </div>
+        </div>
     </div>
 
     <!-- MAIN -->
@@ -33,22 +39,20 @@
         <!-- FIRST PAGE -->
         <div class="first-page">
 
-            <p class="banner">{ Page Title }</p>
+            <img src="img/banner.png" class="banner">
 
             <!-- CONTAINER -->
             <div class="container">
-                <div class="row row--fixed-height">
+                <div class="row row--fixed-height row--paragraph">
                     <div class="quote">Summary of professional history and future plans</div>
 
                     <div class="info">
 
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Circle_-_black_simple.svg/480px-Circle_-_black_simple.svg.png">
+                        <img src="img/avatar.png">
 
-                        <div class="info-text">
-                            24
-                            <br /> Brazil
-                            <br /> Lisbon, Portugal
-                        </div>
+                        <p>&nbsp;24
+                        <br />&nbsp;Lisbon, PT&nbsp;
+                        </p>
                     </div>
                 </div>
 
@@ -123,7 +127,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 
