Fixed buttongroup class alignement.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
         <!-- SOCIAL LINKS -->
         <div class="social">
             <div class="social--icon-container">
-                <a class="linkedin" href="https://www.linkedin.com/in/picareli"><div class="social--icon linkedin"></div></a>
-                <a href="https://connect.unity.com/u/59086d980909150023b548a7"><div class="social--icon unity"></div></a>
-                <a href="https://github.com/picareli" /><div class="social--icon github"></div></a>
+                <a class="linkedin" href="https://www.linkedin.com/in/picareli">
+                    <div class="social--icon linkedin"></div>
+                </a>
+                <a href="https://connect.unity.com/u/59086d980909150023b548a7">
+                    <div class="social--icon unity"></div>
+                </a>
+                <a href="https://github.com/picareli" />
+                <div class="social--icon github"></div>
+                </a>
             </div>
         </div>
     </div>
@@ -51,7 +57,7 @@
                         <img src="img/avatar.png">
 
                         <p>&nbsp;24
-                        <br />&nbsp;Lisbon, PT&nbsp;
+                            <br />&nbsp;Lisbon, PT&nbsp;
                         </p>
                     </div>
                 </div>
@@ -105,11 +111,13 @@
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua.
                     </p>
-
-                    <a class="button" href="https://github.com/picareli">Get Source</a>
-
-                    <a class="button" href="https://itch.io/picareli">Play</a>
+                    
+                    <div class="button-group">
+                        <a class="button" href="https://itch.io/picareli">Play</a>
+                        <a class="button" href="https://github.com/picareli">Get Source</a>
+                    </div>
                 </div>
+
             </div>
         </div>
 
