--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <!-- CONTAINER -->
             <div class="container">
                 <div class="row row--fixed-height row--paragraph">
-                    <div class="quote">Summary of professional history and future plans</div>
+                    <div class="quote">Video game developer with experience in development of serious games, currently working as an Unity3D
+                        developer for a small digital marketing company in Lisbon.</div>
 
                     <div class="info">
 
@@ -64,43 +65,52 @@
 
                 <div class="row">
                     <div class="icon">
-                        <p>education</p>
+                        <h2>Education institution</h2>
 
                         <a href="https://www.ulusofona.pt/en">
-                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                            <img src="img/lusofona.png">
                         </a>
 
-                        <p>short description of position</p>
+                        <p>
+                            <b>Universidade Lusófona</b>
+                            <br /> Where I studied video game development
+                        </p>
                     </div>
 
                     <div class="icon">
-                        <p>past work</p>
+                        <h2>Past workplace</h2>
 
                         <a href="http://labpsicom.ulusofona.pt/en">
-                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                            <img src="img/labpsicom.png">
                         </a>
 
-                        <p>short description of position</p>
+                        <p>
+                            <b>LabPsiCom</b>
+                            <br /> Where I developed Serious Games
+                        </p>
+
                     </div>
 
                     <div class="icon">
-                        <p>current work</p>
+                        <h2>Currently at</h2>
 
                         <a href="http://addon.pt/">
-                            <img src="https://www.ulusofona.pt/pt/media-ref/logotipo-1298-1150-png/download/logo_ulht.png">
+                            <img src="img/labpsicom.png">
                         </a>
 
-                        <p>short description of psoition</p>
+                        <p>
+                            <b>ADDON - Digital Media, Lda.</b>
+                            <br /> Where I am an Unity3D developer
+                        </p>
                     </div>
                 </div>
 
             </div>
         </div>
 
-        <!-- WORKS -->
-        <a name="works"></a>
-
         <div class="project">
+            <!-- WORKS -->
+            <a name="works"></a>
             <iframe width="100%" height="350" src="https://www.youtube-nocookie.com/embed/8iNc3K0rE2s?rel=0&amp;controls=0&amp;showinfo=0"
                 frameborder="0" allowfullscreen></iframe>
 
@@ -111,7 +121,7 @@
                     <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua.
                     </p>
-                    
+
                     <div class="button-group">
                         <a class="button" href="https://itch.io/picareli">Play</a>
                         <a class="button" href="https://github.com/picareli">Get Source</a>
@@ -135,6 +145,8 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">Website developed by myself</div>
     </div>
 </body>
 
