Integrated project to Node.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TItle</title>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="site/temp/styles/styles.css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
         <!-- FIRST PAGE -->
         <div class="first-page">
 
-            <img src="img/banner.png" class="banner">
+            <img src="site/img/banner.png" class="banner">
 
             <!-- CONTAINER -->
             <div class="container">
@@ -55,7 +55,7 @@
 
                     <div class="info">
 
-                        <img src="img/avatar.png">
+                        <img src="site/img/avatar.png">
 
                         <p>&nbsp;24
                             <br />&nbsp;Lisbon, PT&nbsp;
@@ -68,7 +68,7 @@
                         <h2>Education institution</h2>
 
                         <a href="https://www.ulusofona.pt/en">
-                            <img src="img/lusofona.png">
+                            <img src="site/img/lusofona.png">
                         </a>
 
                         <p>
@@ -81,7 +81,7 @@
                         <h2>Past workplace</h2>
 
                         <a href="http://labpsicom.ulusofona.pt/en">
-                            <img src="img/labpsicom.png">
+                            <img src="site/img/labpsicom.png">
                         </a>
 
                         <p>
@@ -95,7 +95,7 @@
                         <h2>Currently at</h2>
 
                         <a href="http://addon.pt/">
-                            <img src="img/labpsicom.png">
+                            <img src="site/img/labpsicom.png">
                         </a>
 
                         <p>
