--- a/index.html
+++ b/index.html
@@ -1,152 +1,50 @@
 <html>
 
 <head>
-    <title>TItle</title>
+    <title>Title</title>
 
-    <link rel="stylesheet" type="text/css" href="site/temp/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
-    <!-- SIDEBAR -->
-    <div class="sidebar">
-
-        <!-- MENU -->
-        <ul class="menu">
-            <li>
-                <a href="index.html">About</a>
-            </li>
-            <li>
-                <a href="#works">Works</a>
-            </li>
-            <li>
-                <a href="https://picareli.tumblr.com/">Blog</a>
-            </li>
-        </ul>
-
-        <!-- SOCIAL LINKS -->
-        <div class="social">
-            <div class="social--icon-container">
-                <a class="linkedin" href="https://www.linkedin.com/in/picareli">
-                    <div class="social--icon linkedin"></div>
-                </a>
-                <a href="https://connect.unity.com/u/59086d980909150023b548a7">
-                    <div class="social--icon unity"></div>
-                </a>
-                <a href="https://github.com/picareli" />
-                <div class="social--icon github"></div>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <!-- MAIN -->
     <div class="main">
 
-        <!-- FIRST PAGE -->
-        <div class="first-page">
+        <!-- CONTAINER -->
+        <div class="container">
+            <div class="row">
 
-            <img src="site/img/banner.png" class="banner">
+                <div class="quote">
+                    I am an <i>Unity3D</i> developer currently looking for a job,
+                    preferably in game development, or interactive applications and experiences.
+                    My main areas of work are gameplay and UI programing.
 
-            <!-- CONTAINER -->
-            <div class="container">
-                <div class="row row--fixed-height row--paragraph">
-                    <div class="quote">Video game developer with experience in development of serious games, currently working as an Unity3D
-                        developer for a small digital marketing company in Lisbon.</div>
+                    <br />
 
-                    <div class="info">
+                    I have worked developing <i>Serious Games</i> that were used for cognitive training and
+                    rehabilitation, and more recently, developing an application for indoors navigation.
 
-                        <img src="site/img/avatar.png">
+                    <h5>There is more detailed information on my Linkedin and I will be updating my Github with
+                    snippets of code from my past projects.</h5>
 
-                        <p>&nbsp;24
-                            <br />&nbsp;Lisbon, PT&nbsp;
-                        </p>
+                    <div class="social">
+                        <a class="linkedin" href="http://www.linkedin.com/in/picareli" target="BLANK"></a>
+                        <a class="github" href="http://www.github.com/picareli" target="BLANK"></a>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="icon">
-                        <h2>Education institution</h2>
+                <div class="info">
+                    <img src="img/avatar.png">
 
-                        <a href="https://www.ulusofona.pt/en">
-                            <img src="site/img/lusofona.png">
-                        </a>
-
-                        <p>
-                            <b>Universidade Lusófona</b>
-                            <br /> Where I studied video game development
-                        </p>
-                    </div>
-
-                    <div class="icon">
-                        <h2>Past workplace</h2>
-
-                        <a href="http://labpsicom.ulusofona.pt/en">
-                            <img src="site/img/labpsicom.png">
-                        </a>
-
-                        <p>
-                            <b>LabPsiCom</b>
-                            <br /> Where I developed Serious Games
-                        </p>
-
-                    </div>
-
-                    <div class="icon">
-                        <h2>Currently at</h2>
-
-                        <a href="http://addon.pt/">
-                            <img src="site/img/labpsicom.png">
-                        </a>
-
-                        <p>
-                            <b>ADDON - Digital Media, Lda.</b>
-                            <br /> Where I am an Unity3D developer
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="project">
-            <!-- WORKS -->
-            <a name="works"></a>
-            <iframe width="100%" height="350" src="https://www.youtube-nocookie.com/embed/8iNc3K0rE2s?rel=0&amp;controls=0&amp;showinfo=0"
-                frameborder="0" allowfullscreen></iframe>
-
-            <div class="container">
-                <div class="row row--paragraph">
-                    <h1>IVAR</h1>
-
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua.
-                    </p>
-
-                    <div class="button-group">
-                        <a class="button" href="https://itch.io/picareli">Play</a>
-                        <a class="button" href="https://github.com/picareli">Get Source</a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="project">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/cBZa4zx8iLE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
-                allowfullscreen></iframe>
-
-            <div class="container">
-                <div class="row row--paragraph">
-                    <h1>Systemic Lisbon Battery</h1>
-
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua.
+                    <p>&nbsp;25
+                        <br />&nbsp;Lisbon, PT&nbsp;
                     </p>
                 </div>
-            </div>
-        </div>
 
-        <div class="footer">Website developed by myself</div>
+            </div>
+
+        </div>
     </div>
 </body>
 
