Updated information - Edited description; - Added link to unity connect page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Luís Felipe Picareli - Game Developer</title>
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
@@ -25,12 +25,13 @@
                     I have worked developing <i>Serious Games</i> that were used for cognitive training and
                     rehabilitation, and more recently, developing an application for indoors navigation.
 
-                    <h5>There is more detailed information on my Linkedin and I will be updating my Github with
-                    snippets of code from my past projects.</h5>
+                    <h5>There is more detailed information on my Unity Connect page and Linkedin and I will be updating my Github with
+                    more code from my past and current projects.</h5>
 
                     <div class="social">
                         <a class="linkedin" href="http://www.linkedin.com/in/picareli" target="BLANK"></a>
                         <a class="github" href="http://www.github.com/picareli" target="BLANK"></a>
+                        <a class="unity" href="https://connect.unity.com/u/luis-felipe-picareli" target="BLANK"></a>
                     </div>
                 </div>
 
