Changed colors; Edited text; Removed Unity Connect link; Added VSCode debug configuration.

--- a/index.html
+++ b/index.html
@@ -16,31 +16,38 @@
             <div class="row">
 
                 <div class="quote">
-                    I am an <i>Unity3D</i> developer currently looking for a job,
-                    preferably in game development, or interactive applications and experiences.
-                    My main areas of work are gameplay and UI programing.
+                    <p>
+                        Game developer, highly proficient with Unity engine and C# programming.
+                        Capable of developing all aspects of a video game (gameplay, UI, systems, ...)
 
-                    <br />
+                        <br />
 
-                    I have worked developing <i>Serious Games</i> that were used for cognitive training and
-                    rehabilitation, and more recently, developing an application for indoors navigation.
+                        Fast learner, great with problem solving and organized, which means my code is always easy to
+                        understand and well docummented.
 
-                    <h5>There is more detailed information on my Unity Connect page and Linkedin and I will be updating my Github with
-                    more code from my past and current projects.</h5>
+                        <br />
+
+                        Currently developing a game titled <a href="https://store.steampowered.com/app/1473900/Zealot/"
+                            target="BLANK"><i>Zealot</i></a> at an independent game development studio.
+
+                        <br />
+
+                        In the past I have worked developing interactive applications, and <i>Serious Games</i> that
+                        were
+                        used for cognitive training and
+                        rehabilitation.
+                    </p>
 
                     <div class="social">
                         <a class="linkedin" href="http://www.linkedin.com/in/picareli" target="BLANK"></a>
                         <a class="github" href="http://www.github.com/picareli" target="BLANK"></a>
-                        <a class="unity" href="https://connect.unity.com/u/luis-felipe-picareli" target="BLANK"></a>
                     </div>
                 </div>
 
                 <div class="info">
-                    <img src="img/avatar.png">
+                    <img src="img/avatar.jpg">
 
-                    <p>&nbsp;25
-                        <br />&nbsp;Lisbon, PT&nbsp;
-                    </p>
+                    <p>&nbsp;Lisbon, PT&nbsp;</p>
                 </div>
 
             </div>
