Edited color palette; Other changes to layout.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Luís Felipe Picareli - Game Developer</title>
+    <title>Luís Picareli - Game Developer</title>
 
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
@@ -14,8 +14,7 @@
         <!-- CONTAINER -->
         <div class="container">
             <div class="row">
-
-                <div class="quote">
+                <div class="quote box-shadow">
                     <p>
                         Game developer, highly proficient with Unity engine and C# programming.
                         Capable of developing all aspects of a video game (gameplay, UI, systems, ...)
@@ -33,9 +32,7 @@
                         <br />
 
                         In the past I have worked developing interactive applications, and <i>Serious Games</i> that
-                        were
-                        used for cognitive training and
-                        rehabilitation.
+                        were used for cognitive training and rehabilitation.
                     </p>
 
                     <div class="social">
@@ -47,7 +44,9 @@
                 <div class="info">
                     <img src="img/avatar.jpg">
 
-                    <p>&nbsp;Lisbon, PT&nbsp;</p>
+                    <p class="box-shadow">Luís Picareli</p>
+
+                    <p class="box-shadow">Lisbon</p>
                 </div>
 
             </div>
