--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
                         In the past I have worked developing interactive applications, and <i>Serious Games</i> that
                         were used for cognitive training and rehabilitation.
+
+                        <br />
+
+                        You can view my CV <a href="files\CV_LuisPicareli.pdf" target="BLANK">here</a>
                     </p>
 
                     <div class="social">
