--- a/newindex.html
+++ b/newindex.html
@@ -5,15 +5,16 @@
 
     <link rel="stylesheet" type="text/css" href="styles/general.css" />
     <link rel="stylesheet" type="text/css" href="styles/newstyle.css" />
+
+    <nav class="flex row menu">
+        <a href="">Resume</a>
+        <a href="">Projects</a>
+        <a href="">Experience</a>
+    </nav>
 </head>
 
-<body>
-    <div>
-        <nav class="flex row menu">
-            <a href="">Resume</a>
-            <a href="">Projects</a>
-            <a href="">Experience</a>
-        </nav>
+<body class="flex column">
+    <div class="flex-child">
 
         <div class="flex column info">
 
@@ -34,12 +35,11 @@
                 <a class="cv" href="files/CV_LuisPicareli.pdf" title="My CV"></a>
 
             </div>
-
         </div>
 
         <div class="flex column main-container">
 
-            <p class="title no-margin">~/Past-Projects</p>
+            <p class="title no-margin"><b>~/</b>Past-Projects</p>
 
             <div class="flex row column-gap">
 
@@ -51,94 +51,149 @@
 
                         <div class="flex column flex-child padding-double image-container description-logos">
 
-                            <a href="" title="Unity Engine">
-                                <img src="img/logos/unity.svg" />
-                            </a>
+                            <img src="img/logos/unity.svg" title="Unity Engine" />
 
-                            <a href="" title="Platic SCM">
-                                <img src="img/logos/plastic-scm.svg" />
-                            </a>
+                            <img src="img/logos/plastic-scm.svg" title="Plastic SCM" />
 
                         </div>
 
-                        <p class="flex-child align-right">
-                            The quick brown fox jumped over the lazy dog.
+                        <p class="flex-child-wide align-right">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                            architecto beatae vitae dicta sunt explicabo.
                         </p>
-
                     </div>
-
                 </div>
 
                 <div class="flex column flex-child padding-single bg-color">
 
-                    <p class="subtitle no-margin align-right separator"><b>~/Past-Projects/</b>Systemic-Lisbon-Battery</p>
+                    <p class="subtitle no-margin align-right separator"><b>~/Past-Projects/</b>Systemic-Lisbon-Battery
+                    </p>
 
                     <div class="flex row flex-child">
 
                         <div class="flex column flex-child padding-double image-container description-logos">
 
-                            <a href="">
-                                <img src="img/logos/unity.svg" />
-                            </a>
+                            <img src="img/logos/unity.svg" title="Unity Engine" />
 
-                            <a href="">
-                                <img src="img/logos/kinect.svg" />
-                            </a>
+                            <img src="img/logos/kinect.svg" title="Kinect for Windows" />
 
-                            <a href="">
-                                <img src="img/logos/android.svg" />
-                            </a>
+                            <img src="img/logos/android.svg" title="Android SDK" />
 
                         </div>
 
-                        <p class="flex-child align-right">
-                            The quick brown fox jumped over the lazy dog.
+                        <p class="flex-child-wide align-right">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                            architecto beatae vitae dicta sunt explicabo.
                         </p>
-
                     </div>
+                </div>
+            </div>
 
+            <p class="flex-child no-margin"></p>
+
+            <p class="title no-margin"><b>~/</b>Work-in-Progress</p>
+
+            <div class="flex row column-gap">
+
+                <div class="flex column flex-child padding-single bg-color">
+
+                    <p class="subtitle no-margin align-right separator"><b>~/Work-in-Progress/</b>ProjectFS</p>
+
+                    <div class="flex row flex-child">
+
+                        <div class="flex column flex-child padding-double image-container description-logos">
+
+                            <img src="img/logos/python.svg" title="Python">
+
+                            <img src="img/logos/csharp.svg" title="C#">
+
+                            <img src="img/logos/unity.svg" title="Unity Engine" />
+
+                        </div>
+
+                        <p class="flex-child-wide align-right">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                            architecto beatae vitae dicta sunt explicabo.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="flex column flex-child padding-single bg-color">
+
+                    <p class="subtitle no-margin align-right separator"><b>~/Work-in-Progress/</b>Password-Manager</p>
+
+                    <div class="flex row flex-child">
+
+                        <div class="flex column flex-child padding-double image-container description-logos">
+
+                            <img src="img/logos/python.svg" title="Python">
+
+                        </div>
+
+                        <p class="flex-child-wide align-right">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                            architecto beatae vitae dicta sunt explicabo.
+                        </p>
+                    </div>
                 </div>
 
             </div>
 
-            <p class="title no-margin">~/Skills</p>
+            <p class="flex-child no-margin"></p>
+
+            <p class="title no-margin"><b>~/</b>Skills</p>
 
             <div class="flex column padding-double bg-color" style="row-gap: 50px;">
 
                 <div class="flex-child flex row image-container skill-logos">
 
-                    <img src="img/logos/csharp.svg" />
+                    <img src="img/logos/csharp.svg" title="C#" />
 
-                    <img src="img/logos/c.svg" />
+                    <img src="img/logos/c.svg" title="C" />
 
-                    <img src="img/logos/python.svg" />
+                    <img src="img/logos/python.svg" title="Python" />
 
-                    <img src="img/logos/lua.svg" />
+                    <img src="img/logos/lua.svg" title="Lua" />
 
-                    <img src="img/logos/javascript.svg" />
+                    <img src="img/logos/javascript.svg" title="JavaScript" />
 
-                    <img src="img/logos/html.svg" />
+                    <img src="img/logos/html.svg" title="HTML" />
 
-                    <img src="img/logos/css.svg" />
+                    <img src="img/logos/css.svg" title="CSS" />
 
-                    <img src="img/logos/php.svg" />
+                    <img src="img/logos/php.svg" title="PHP" />
 
                 </div>
 
                 <div class="flex-child flex row image-container skill-logos">
 
-                    <img src="img/logos/unity.svg" />
+                    <img src="img/logos/unity.svg" title="Unity Engine" />
 
-                    <img src="img/logos/vscode.svg" style="max-width: 56px;" />
+                    <img src="img/logos/vscode.svg" title="Visual Studio Code" style="max-width: 56px;" />
 
-                    <img src="img/logos/visualstudio.svg" style="max-width: 56px;" />
+                    <img src="img/logos/visualstudio.svg" title="Visual Studio" style="max-width: 56px;" />
 
-                    <img src="img/logos/git.svg" />
+                    <img src="img/logos/git.svg" title="Git" />
 
-                    <img src="img/logos/mysql.svg" />
+                    <img src="img/logos/mysql.svg" title="MySQL" />
 
                 </div>
             </div>
+
+            <br>
+            <br>
+            <br>
+
         </div>
     </div>
+
+    <footer>
+        <p>2025 Luis Picareli</p>
+    </footer>
 </body>
+
+</html>
