--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Luis Picareli - Software Developer</title>
 
+    <link rel="icon" type="image/x-icon" href="img/fav.ico" />
     <link rel="stylesheet" type="text/css" href="styles/general.css" />
     <link rel="stylesheet" type="text/css" href="styles/independent.css" />
 
