Test implementation of responsive class for mobile layout.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <p id="projects" class="title no-margin"><b>~/</b>Past-Projects</p>
 
-            <div class="flex row column-gap">
+            <div class="flex row responsive column-gap">
 
                 <div class="flex column flex-child padding-single bg-color">
 
@@ -106,7 +106,7 @@
 
             <p class="title no-margin"><b>~/</b>Work-in-Progress</p>
 
-            <div class="flex row column-gap">
+            <div class="flex row responsive column-gap">
 
                 <div class="flex column flex-child padding-single bg-color">
 
